--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xml:lang="en" xmlns= "http://www.w3.org/1999/xhtml">
 	<head>
 		<title>About Me</title>
-		<link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1025281982/vector/best-simple-champion-cup-winner-trophy-award-and-victory.jpg?s=612x612&w=0&k=20&c=PmRzQNF3nf1nQm8cslQoRh7Mzp5Ljgm-7FRt9vBFvfU=">
+		<link rel="icon" type="image/x-icon" href="https://media.istockphoto.com/id/1025281982/vector/best-simple-champion-cup-winner-trophy-award-and-victory.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
