--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xml:lang="en" xmlns= "http://www.w3.org/1999/xhtml">
 	<head>
 		<title>About Me</title>
-		<link rel="icon" type="image/ico" href="trophy.ico"
+		<link rel="icon" type="image/ico" href="trophy.ico"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
