--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Shankar Harikrishnan</h1>
-						<p>9th Grader &nbsp;&bull;&nbsp; Student at Stevenson High School ;&bull;&nbsp; Passionate about academic competitions</p>
+						<p>9th Grader &nbsp;&bull;&nbsp; Student at Stevenson High School &nbsp;&bull;&nbsp; Passionate about academic competitions</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
