--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 						<p>9th Grader &nbsp;&bull;&nbsp; Student at Stevenson High School &nbsp;&bull;&nbsp; Passionate about academic competitions</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+    								<li><a href="#"><i class="fa-brands fa-instagram instagram"></i></a></li>
+  							  	<li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
+    								<li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
 							</ul>
 						</nav>
 					</header>
