--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   							  	<li><a href="#"><i class="fa-brands fa-whatsapp whatsapp"></i></a></li>
     								<li><a href="#"><i class="fa-brands fa-twitter twitter"></i></a></li>
 							</ul>
+							
+						<a href="https://www.linkedin.com">
+							<button>Linkedin</button>
+						</a>
 						</nav>
 					</header>
 
