--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; By Shankar Harikrishnan </a>.</span>
+						<span> By Shankar Harikrishnan </a></span>
 					</footer>
 
 			</div>
