--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Shankar Harikrishnan</h1>
-						<p>9th Grader &nbsp;&bull;&nbsp; Student at Stevenson High School &nbsp;&bull;&nbsp; Passionate about academic competitions</p>
+						<p>9th Grader at Stevenson High School &nbsp;&bull;&nbsp; Passionate about academic competitions &nbsp;&bull;&nbsp; Science, Geography, History </p>
 							
 						<a href="https://www.linkedin.com">
 							<button>Linkedin</button>
