--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 						<a href="https://www.linkedin.com">
 							<button>Linkedin</button>
 						</a>
+
+						<a href="https://www.geosci89.github.io/igc.html">
+							<button>Linkedin</button>
+						</a>
 						</nav>
 					</header>
 
