--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</a>
 
 						<a href="https://www.geosci89.github.io/igc.html">
-							<button>Linkedin</button>
+							<button>IGC '24</button>
 						</a>
 						</nav>
 					</header>
