--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<button>Linkedin</button>
 						</a>
 
-						<a href="https://www.geosci89.github.io/igc.html">
+						<a href="https://geosci89.github.io/igc.html">
 							<button>IGC '24</button>
 						</a>
 						</nav>
