--- a/igc.html
+++ b/igc.html
@@ -1,1 +1,45 @@
-a
+<!DOCTYPE HTML>
+
+<html>
+	<head>
+		<title>IGC 2024</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>IGC 2024 Experience</h1>
+						<p> Held in Vienna, Austria &nbsp;&bull;&nbsp; Placed 4th </p>
+							
+						<a href="https://www.linkedin.com">
+							<button>Linkedin</button>
+						</a>
+
+						<a href="https://geosci89.github.io/igc.html">
+							<button>IGC '24</button>
+						</a>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span> By Shankar Harikrishnan </a></span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
+</html>
