--- a/igc.html
+++ b/igc.html
@@ -18,7 +18,7 @@
 					<header id="header">
 						<h1>IGC 2024 Experience</h1>
 						<p> Held in Vienna, Austria &nbsp;&bull;&nbsp; Placed 4th </p>
-							
+						<p style="background-image: url('Sydney Wallpaper.jpg');">	
 						<a href="https://www.linkedin.com">
 							<button>Linkedin</button>
 						</a>
