--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 					<header id="header">
 						<h1>Shankar Harikrishnan</h1>
 						<p>9th Grader at Stevenson High School &nbsp;&bull;&nbsp; Passionate about academic competitions &nbsp;&bull;&nbsp; Science, Geography, History </p>
-							
+						<a href="https://www.linkedin.com">
+							<button>Linkedin</button>
+						</a>
+
+						<a href="https://geosci89.github.io/igc.html">
+							<button>IGC '24</button>
+						</a>
 					
 						</nav>
 					</header>
